--- a/stronka.html
+++ b/stronka.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
+    <title>Gra</title>
 </head>
 <body>
-    elo, nowa strona
+    <ekwipunek>
+        <helm>
+
+        </helm>
+        <napiersnik>
+
+        </napiersnik>
+        <buty>
+
+        </buty>
+        <bron>
+
+        </bron>
+        <tarcza>
+
+        </tarcza>
+        <trinket>
+
+        </trinket>
+    </ekwipunek>
+    <inwentarz>
+        
+    </inwentarz>
 </body>
 </html>
