--- a/stronka.html
+++ b/stronka.html
@@ -7,28 +7,28 @@
     <title>Gra</title>
 </head>
 <body>
-    <ekwipunek>
-        <helm>
+    <div id="ekwipunek">
+        <div id="helm">
 
-        </helm>
-        <napiersnik>
+        </div>
+        <div id="napiersnik">
 
-        </napiersnik>
-        <buty>
+        </div>
+        <div id="buty">
 
-        </buty>
-        <bron>
+        </div>
+        <div id="bron">
 
-        </bron>
-        <tarcza>
+        </div>
+        <div id="tarcza">
 
-        </tarcza>
-        <trinket>
+        </div>
+        <div id="trinket">
 
-        </trinket>
-    </ekwipunek>
+        </div>
+    </div>
     <inwentarz>
-        
+
     </inwentarz>
 </body>
 </html>
