dodalem podzial na sekcje

--- a/stronka.html
+++ b/stronka.html
@@ -8,24 +8,33 @@
 </head>
 <body>
     <div id="ekwipunek">
-        <div id="helm">
+        <section id="lewy">
+            <div id="helm">
 
-        </div>
-        <div id="napiersnik">
+            </div>
+            <div id="napiersnik">
 
-        </div>
-        <div id="buty">
+            </div>
+            <div id="buty">
 
-        </div>
-        <div id="bron">
+            </div>
+        </section>
+        <section id="glowny">
+            <div id="postac">
 
-        </div>
-        <div id="tarcza">
+            </div>
+        </section>
+        <section id="prawy">
+            <div id="bron">
 
-        </div>
-        <div id="trinket">
+            </div>
+            <div id="tarcza">
 
-        </div>
+            </div>
+            <div id="trinket">
+
+            </div>
+        </section>
     </div>
     <inwentarz>
 
