--- a/stronka.html
+++ b/stronka.html
@@ -36,8 +36,8 @@
             </div>
         </section>
     </div>
-    <inwentarz>
+    <div id="inwentarz">
 
-    </inwentarz>
+    </div>
 </body>
 </html>
