inwentarz, header i stopka

--- a/stronka.html
+++ b/stronka.html
@@ -7,6 +7,10 @@
     <title>Gra</title>
 </head>
 <body>
+    <header>
+        <img id="logo" src="photos/logo.jpg" alt="logo">
+        <img id="napis" src="photos/napis.png" alt="yasznog">
+    </header>
     <div id="ekwipunek">
         <section id="lewy">
             <div id="helm">
@@ -37,7 +41,26 @@
         </section>
     </div>
     <div id="inwentarz">
+        <section id="inventory">
+            <div id="slot1">
 
+            </div>
+            <div id="slot2">
+
+            </div>
+            <div id="slot3">
+
+            </div>
+            <div id="slot4">
+
+            </div>
+            <div id="slot5">
+                
+            </div>
+        </section>
     </div>
+    <footer>
+        <p>WSZELKIE PRAWA ZASTRZEŻONE&copy;</p>
+    </footer>
 </body>
 </html>
