Zastąpiono pliki zawartością z mariusz

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YASZNOG THE GAME</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <header>
+    <div id="header">
         <img id="logo" src="photos/logo.jpg" alt="logo">
         <img id="napis" src="photos/napis.png" alt="yasznog">
-    </header>
-    <section>
+    </div>
+
+    <div id="main">
         
-    </section>
-    <main>
          <button id="loguj" onclick="showLoginForm()">Zaloguj się</button>
          <button id="rejestruj" onclick="showRegisterForm()">Zarejestruj się</button>
 
@@ -39,11 +39,10 @@
             <input type="submit" value="Zarejestruj">
             </form>
         </div>
-    </main>
+    </div>
 
-    <footer>
-        <p>WSZELKIE PRAWA ZASTRZEŻONE&copy;</p>
-    </footer>
+
+
     <script src="skrypt.js"></script>
 </body>
 </html>
