--- a/zbrojmistrz.html
+++ b/zbrojmistrz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="zbrojmistrz.css">
     <title>Zbrojmistrz</title>
 </head>
 <body>
