--- a/walka.html
+++ b/walka.html
@@ -28,12 +28,15 @@
   });
 </script>
     <h1>WITAJ NA ARENIE</h1>
-    <h3>Tutaj udowodnisz swoją wartość i pokażesz an co cię stać</h3>
+    <h3>Tutaj udowodnisz swoją wartość i pokażesz na co cię stać</h3>
+    <section id="walka-container">
+    <div id="wrog">
+        <img src="photos/zbiry.png" alt="Wróg">
+    </div>
+    <section id="versus">⚔️</section>
     <section id="postac">
-
+        <img src="photos/biznesman.png" alt="Postać">
     </section>
-    <section id="wrog">
-
-    </section>
+</section>
 </body>
 </html>
