--- a/kowal.html
+++ b/kowal.html
@@ -27,27 +27,23 @@
         dropdownMenu.classList.toggle("show");
   });
 </script>
-    <h1>WITAJ U KOWALA</h1>
-    <h2>Zakup broni, tarczy i trinketow dla twej postaci</h2>
-    <h1>BRONIE</h1>
-    <table>
-    <tr>
-        <td>Miecz</td> <td>Młot</td> <td>Maczuga</td>
-    </tr>
-    </table>
-
-    <h1>TARCZE</h1>
-    <table>
-    <tr>
-        <td>1</td> <td>2</td> <td>3</td>
-    </tr>
-    </table>
-
-    <h1>TRINKETY</h1>
-    <table>
-    <tr>
-        <td>1</td> <td>2</td> <td>3</td>
-    </tr>
-    </table>
+    <header>
+        <h1>Witaj u kowala</h1>
+    </header>
+    <div id="sklep">
+        <div class="buty">Buty</div>
+        <div class="buty-1"><img src="items/buty_wiking.png"></div>
+        <div class="buty-2"><img src="items/buty_rycerz.png"></div>
+        <div class="buty-3"><img src="items/buty_zolnierz.png"></div>
+        <div class="zbroje">Zbroje</div>
+        <div class="zbroja-1"><img src="items/klata_wiking.png"></div>
+        <div class="zbroja-2"><img src="items/klata_rycerz.png"></div>
+        <div class="zbroja-3"><img src="items/klata_zolnierz.png"></div>
+        <div class="hełmy">Hełmy</div>
+        <div class="hełm-1"><img src="items/helm_wiking.png"></div>
+        <div class="hełm-2"><img src="items/helm_rycerz.png"></div>
+        <div class="hełm-3"><img src="items/helm_zolnierz.png"></div>
+        <div class="kowal"><img src="items/bombie.png"></div>
+    </div>
 </body>
 </html>
