--- a/zbrojmistrz.html
+++ b/zbrojmistrz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="zbrojmistrz.css">
-    <title>Zbrojmistrz</title>
+    <title>Kowal</title>
 </head>
 <body>
     <nav class="menu-wrapper">
@@ -27,27 +27,23 @@
         dropdownMenu.classList.toggle("show");
   });
 </script>
-    <h1>WITAJ U ZBROJMISTRZA</h1>
-    <h2>Zakup pancerza dla twej postaci</h2>
-    <h1>HEŁMY</h1>
-    <table>
-    <tr>
-        <td>1</td> <td>2</td> <td>3</td>
-    </tr>
-    </table>
-
-    <h1>ZBROJE</h1>
-    <table>
-    <tr>
-        <td>1</td> <td>2</td> <td>3</td>
-    </tr>
-    </table>
-
-    <h1>BUTY</h1>
-    <table>
-    <tr>
-        <td>1</td> <td>2</td> <td>3</td>
-    </tr>
-    </table>
+    <header>
+        <h1>Witaj u zbrojmistrza</h1>
+    </header>
+    <div id="sklep">
+        <div class="bronie">Bronie</div>
+        <div class="bron-1"><img src="items/miecz.png"></div>
+        <div class="bron-2"><img src="items/mlot.png"></div>
+        <div class="bron-3"><img src="items/maczuga.png"></div>
+        <div class="tarcze">Tarcze</div>
+        <div class="tarcza-1"><img src="items/tarcza_wiking.png"></div>
+        <div class="tarcza-2"><img src="items/tarcza_rycerz.png"></div>
+        <div class="tarcza-3"><img src="items/tarcza_zolnierz.png"></div>
+        <div class="trinkety">Trinkety</div>
+        <div class="trinket-1"><img src="items/znak.png"></div>
+        <div class="trinket-2"><img src="items/flacha.png"></div>
+        <div class="trinket-3"><img src="items/bombie.png"></div>
+        <div class="zbrojmistrz"><img src="items/bombie.png"></div>
+    </div>
 </body>
 </html>
