Poprawki w css'ach i nowe pliki

--- a/walka.html
+++ b/walka.html
@@ -12,8 +12,8 @@
     <div id="dropdownMenu" class="hidden">
     <ul>
         <li><a href="stronka.php">Profil</a></li>
-        <li><a href="zbrojmistrz.html">Zbrojmistrz</a></li>
-        <li><a href="kowal.html">Kowal</a></li>
+        <li><a href="zbrojmistrz.php">Zbrojmistrz</a></li>
+        <li><a href="kowal.php">Kowal</a></li>
         <li><a href="walka.html">Walka</a></li>
         <li><a href="logout.php">Wyloguj</a></li>
     </ul>
