--- a/walka.html
+++ b/walka.html
@@ -28,15 +28,12 @@
   });
 </script>
     <h1>WITAJ NA ARENIE</h1>
-    <h2>Tutaj udowodnisz swoją wartość i pokażesz na co cię stać</h2>
-    <section id="walka-container">
-    <div id="wrog">
-        <img src="photos/zbiry.png" alt="Wróg">
-    </div>
-    <section id="versus">⚔️</section>
+    <h3>Tutaj udowodnisz swoją wartość i pokażesz an co cię stać</h3>
     <section id="postac">
-        <img src="photos/biznesman.png" alt="Postać">
+
     </section>
-</section>
+    <section id="wrog">
+
+    </section>
 </body>
 </html>
