Zmieniono walka.css i walka.html oraz drobne poprawki w style2.css

--- a/walka.html
+++ b/walka.html
@@ -19,21 +19,55 @@
     </ul>
     </div>
 </nav>
-<script>
-  const toggleButton = document.getElementById("menuToggle");
-  const dropdownMenu = document.getElementById("dropdownMenu");
+    <div id="napis">
+        <h1>WITAJ NA ARENIE</h1>
+        <h3>Tutaj udowodnisz swoją wartość i pokażesz na co cię stać</h3>
+    </div>
+    <button id="przycisk_walka">Szukaj przeciwnika</button>
+    <div id="walka" class="hidden">
+        <img src="photos/logo.jpg" id="postac">
+        <img src="photos/bpp.jpg" id="wrog">
+        <div id="statystyki_postac">
+        <h2>Statystyki postaci</h2>
+            <ul>
+                <li>HP: 1</li>
+                <li>Obrażenia: 1</li>
+                <li>Obrona: 1</li>
+                <li>Zręczność: 1</li>
+                <li>Szczęście: 1</li>
+                <li>Blok: 1</li>
+                <li>Kredytki: 1</li>
+            </ul>
+        </div>
+        <div id="statystyki_wrog">
+        <h2>Statystyki wroga</h2>
+            <ul>
+                <li>HP: 1</li>
+                <li>Obrażenia: 1</li>
+                <li>Obrona: 1</li>
+                <li>Zręczność: 1</li>
+                <li>Szczęście: 1</li>
+                <li>Blok: 1</li>
+                <li>Kredytki: 1</li>
+            </ul>
+        </div>
+        <div id="panel_glowny">
+            be be beng
+        </div>
+    </div>
+    <script>
+        const toggleButton = document.getElementById("menuToggle");
+        const dropdownMenu = document.getElementById("dropdownMenu");
 
-    toggleButton.addEventListener("click", () => {
-        dropdownMenu.classList.toggle("show");
-  });
-</script>
-    <h1>WITAJ NA ARENIE</h1>
-    <h3>Tutaj udowodnisz swoją wartość i pokażesz an co cię stać</h3>
-    <section id="postac">
+        toggleButton.addEventListener("click", () => {
+            dropdownMenu.classList.toggle("show");});
 
-    </section>
-    <section id="wrog">
+        const walkabutton = document.getElementById("przycisk_walka");
+        const walkadiv = document.getElementById("walka");
 
-    </section>
+        walkabutton.addEventListener("click", function(){
+            console.log("Kliknięto przycisk walki");
+            walkadiv.classList.remove("hidden");});
+    </script>
 </body>
 </html>
