--- a/walka.html
+++ b/walka.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tutaj walczysz aby zyskac honor i zostac najlepszym wojownikiem">
     <link rel="stylesheet" href="walka.css">
+    <link rel="icon" href="photos/logo.jpg" type="image/jpg">
     <title>Walka</title>
 </head>
 <body>
@@ -21,12 +23,12 @@
 </nav>
     <div id="napis">
         <h1>WITAJ NA ARENIE</h1>
-        <h3>Tutaj udowodnisz swoją wartość i pokażesz na co cię stać</h3>
+        <h2>Tutaj udowodnisz swoją wartość i pokażesz na co cię stać</h2>
     </div>
     <button id="przycisk_walka">Szukaj przeciwnika</button>
     <div id="walka" class="hidden">
-        <img src="photos/logo.jpg" id="postac">
-        <img src="photos/bpp.jpg" id="wrog">
+        <img src="photos/logo.jpg" id="postac" alt="Ty">
+        <img src="photos/bpp.jpg" id="wrog" alt="twoj adwersarz">
         <div id="statystyki_postac">
         <h2>Statystyki postaci</h2>
             <ul>
