--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,10 +18,10 @@
 
     <div id="loginForm" style="display:none;">
       <h2>Logowanie</h2>
-      <form action="logowanie.php" method="POST">
-        <label for="username">Login:</label>
+      <form id="loginFormElement">
+        <label for="lusername">Login:</label>
         <input type="text" id="lusername" name="lusername" /><br /><br />
-        <label for="password">Hasło:</label>
+        <label for="lpassword">Hasło:</label>
         <input type="password" id="lpassword" name="lpassword" /><br /><br />
         <input type="submit" value="Zaloguj" />
       </form>
