--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
   <div id="header">
-    <img id="logo" src="photos/logo.jpg" alt="logo" />
-    <img id="napis" src="photos/napis.png" alt="yasznog" />
+    <a href="index.html"><img id="napis" src="photos/napis.png" alt="yasznog"/></a>
   </div>
 
   <div id="main">
@@ -27,6 +26,7 @@
         <input type="password" id="lpassword" name="lpassword" /><br /><br />
         <input type="submit" value="Zaloguj" />
       </form>
+      <button id="anulacja" onclick="window.location.href='index.html'">Anuluj</button>
     </div>
 
     <div id="registerForm" style="display:none;">
@@ -38,6 +38,7 @@
         <input type="password" id="rpassword" name="rpassword" /><br /><br />
         <input type="submit" value="Zarejestruj" />
       </form>
+      <button id="rejestruj" onclick="window.location.href='index.html'">Anuluj</button>
     </div>
   </div>
 
