--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <input type="password" id="rpassword" name="rpassword" /><br /><br />
         <input type="submit" value="Zarejestruj" />
       </form>
-      <button id="rejestruj" onclick="window.location.href='index.html'">Anuluj</button>
+      <button id="anulacja" onclick="window.location.href='index.html'">Anuluj</button>
     </div>
   </div>
 
