--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="loginForm" style="display:none;">
       <h2>Logowanie</h2>
-      <form action="logowanie.php" method="POST">
+      <form id="loginFormElement" method="POST">
         <label for="username">Login:</label>
         <input type="text" id="lusername" name="lusername" /><br /><br />
         <label for="password">Hasło:</label>
